[package]
name = "enum_default"
version = "0.2.2"
authors = ["Oscar Moreno <oscarmg99@gmail.com>"]
repository = "https://github.com/ozkar99/enum_default"
description = """
enum_default provides an EnumDefault derive macro 
that provides a std::Default implementation
for Enums by using the first value
"""
edition = "2018"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"